# python_genetics_experiments

./: .gitignore  genome_indexing.py  packed_genome.py  uniquify.py  utils.py
genome_rspy/: Cargo.toml  pyproject.toml
genome_rspy/genome_rspy/: __init__.py
genome_rspy/packed_genome/: Cargo.toml
genome_rspy/packed_genome/src/: lib.rs  tests.rs
genome_rspy/src/: lib.rs  main.rs  python_module.rs  tests.rs
packed_genome/src/: lib.rs  tests.rs
