[package]
name = "genome_rspy"
version = "0.1.0"
edition = "2021"
build = "src/build.rs"

[lib]
name = "genome_rspy"
crate-type = ["cdylib"]

[dependencies]
md5 = "0.7.0"
packed_genome = { version = "0.1.0", path = "packed_genome", features = ["progress"] }
rayon = "1.10.0"
serde = { version = "1.0.204", features = ["derive"] }
thiserror = "1.0.62"
tqdm = "0.7.0"
pyo3 = { version = "0.22.1", features = ["extension-module"] }

[build-dependencies]
pyo3-build-config = "0.22.1"

[workspace]
members = ["packed_genome"]
