[build-system]
requires = ["maturin==1.7.0"]
build-backend = "maturin"

[metadata]
requires-python = ">=3.7"
classifiers=[
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
]

