[build-system]
requires = ["maturin==1.7.0"]
build-backend = "maturin"

[project]
dynamic = ["version"]
name = "genome_rspy"
requires-python = ">=3.10"
classifiers=[
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python",
]

[project.urls]
"Source code" = "https://github.com/techno-sam/python_genetics_experiments"
