[package]
name = "packed_genome"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bincode = "1.3.3"
bzip2 = "0.4.4"
ndarray = "0.15.6"
num = "0.4.3"
rand = "0.8.5"
serde = { version = "1.0.204", features = ["derive"]}
